test2
root@opexwise-dev2:~/arlo_superset/arlo-superset/docker/pythonpath_dev# cat Superset_config.py 
import smtplib
from email.mime.text import MIMEText

# SMTP configuration
SMTP_HOST = 'chnrelay.growipx.com'
SMTP_PORT = 587
SMTP_USER = 'supporfirst_dev@iopex.com'
SMTP_PASSWORD = 'twrlwoapmikkddpp'
SMTP_MAIL_FROM = 'supporfirst_dev@iopex.com'

# Email content
subject = "Test Email"
body = "This is a test email from Apache Superset."

# Create message
msg = MIMEText(body)
msg['From'] = SMTP_MAIL_FROM
msg['To'] = 'balasubramaniyan.d@iopex.com'  # Replace with recipient's email address
msg['Subject'] = subject

# Connect to SMTP server
server = smtplib.SMTP(SMTP_HOST, SMTP_PORT)
server.starttls()
server.login(SMTP_USER, SMTP_PASSWORD)

# Send email
server.sendmail(SMTP_MAIL_FROM 'balasubramaniyan.d@iopex.com', msg.as_string())

# Close connection
server.quit()

print("Test email sent successfully.")
root@opexwise-dev2:~/arlo_superset/arlo-superset/docker/pythonpath_dev# 





root@opexwise-dev2:~/arlo_superset/arlo-superset/docker/pythonpath_dev# python3 Superset_config.py 
  File "Superset_config.py", line 27
    server.sendmail(SMTP_MAIL_FROM 'balasubramaniyan.d@iopex.com', msg.as_string())
                                   ^
SyntaxError: invalid syntax
Error in sys.excepthook:
Traceback (most recent call last):
  File "/usr/lib/python3/dist-packages/apport_python_hook.py", line 72, in apport_excepthook
    from apport.fileutils import likely_packaged, get_recent_crashes
  File "/usr/lib/python3/dist-packages/apport/__init__.py", line 5, in <module>
    from apport.report import Report
  File "/usr/lib/python3/dist-packages/apport/report.py", line 32, in <module>
    import apport.fileutils
  File "/usr/lib/python3/dist-packages/apport/fileutils.py", line 12, in <module>
    import os, glob, subprocess, os.path, time, pwd, sys, requests_unixsocket
  File "/usr/lib/python3/dist-packages/requests_unixsocket/__init__.py", line 1, in <module>
    import requests
  File "/usr/lib/python3/dist-packages/requests/__init__.py", line 95, in <module>
    from urllib3.contrib import pyopenssl
  File "/usr/lib/python3/dist-packages/urllib3/contrib/pyopenssl.py", line 46, in <module>
    import OpenSSL.SSL
  File "/usr/lib/python3/dist-packages/OpenSSL/__init__.py", line 8, in <module>
    from OpenSSL import crypto, SSL
  File "/usr/lib/python3/dist-packages/OpenSSL/crypto.py", line 1553, in <module>
    class X509StoreFlags(object):
  File "/usr/lib/python3/dist-packages/OpenSSL/crypto.py", line 1573, in X509StoreFlags
    CB_ISSUER_CHECK = _lib.X509_V_FLAG_CB_ISSUER_CHECK
AttributeError: module 'lib' has no attribute 'X509_V_FLAG_CB_ISSUER_CHECK'

Original exception was:
  File "Superset_config.py", line 27
    server.sendmail(SMTP_MAIL_FROM 'balasubramaniyan.d@iopex.com', msg.as_string())
                                   ^
SyntaxError: invalid syntax
root@opexwise-dev2:~/arlo_superset/arlo-superset/docker/pythonpath_dev# 

